data/derived/sp14/progs/unify/prog4736.ml.out
Characters 46-54:
  wwhile ((g,true), b);;
          ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
